<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/apple" />

        <CheckBox
            android:id="@+id/checkBox_0"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/productAplle" />

        <EditText
            android:id="@+id/editTextNumber_0"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:visibility="visible"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextNumber_00"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/strawberry" />

        <CheckBox
            android:id="@+id/checkBox_1"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/productStrawberry" />

        <EditText
            android:id="@+id/editTextNumber_1"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextNumber_01"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/blueberries" />

        <CheckBox
            android:id="@+id/checkBox_2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/productBlueberry" />

        <EditText
            android:id="@+id/editTextNumber_2"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextNumber_02"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/potato" />

        <CheckBox
            android:id="@+id/checkBox_3"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/productPotatoes" />

        <EditText
            android:id="@+id/editTextNumber_3"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextNumber_03"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCalc"
            android:text="@string/buttonCalculate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_Message"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="setRadioButtonClick"
            android:tag="1"
            android:text="@string/rb_Message" />

        <RadioButton
            android:id="@+id/rb_Toast"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setRadioButtonClick"
            android:tag="2"
            android:text="@string/rb_Toast" />
    </LinearLayout>
</LinearLayout>